# SyntheticDataset

./: LICENSE  README.md
user_tools/: README.md
user_tools/PcdToBin/: ReadME.md  build.bat  build.sh
user_tools/PcdToBin/pcd_sim/: 000000.pcd  000001.pcd
user_tools/PcdToBin/src/: CMakeLists.txt  PcdToBin.cpp
user_tools/simone_loader/: loader_config.py  simone2kitti.py  simone_loader.py
